# sudoku-cuda

./: CMakeLists.txt
cmake/modules/: FindTensorFlow.cmake
includes/: sudoku.h
